--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout Hoop
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_TOKEN }}  # Add token for private repositories
 
       - name: Checkout libhoop
         uses: actions/checkout@v3
@@ -57,7 +59,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Push Docker Image to GHCR
         uses: docker/build-push-action@v5
