--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Checkout Hoop
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GH_TOKEN }}  # Add token for private repositories
+          token: ${{ secrets.GH_TOKEN }}  # Ensure token is provided here
 
       - name: Checkout libhoop
         uses: actions/checkout@v3
         with:
           repository: hoophq/libhoop
           path: './libhoop'
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}  # Ensure token is provided here
 
       - name: Setup Go
         uses: actions/setup-go@v3
