--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Checkout Hoop
         uses: actions/checkout@v3
 
-      - name: Checkout libhoop
-        uses: actions/checkout@v3
-        with:
-          repository: hoophq/libhoop
-          path: './libhoop'
-          token: ${{ secrets.GITHUB_TOKEN }} # Ensure token is provided here
+      # - name: Checkout libhoop
+      #   uses: actions/checkout@v3
+      #   with:
+      #     repository: hoophq/libhoop
+      #     path: './libhoop'
+      #     token: ${{ secrets.GITHUB_TOKEN }} # Ensure token is provided here
 
       - name: Setup Go
         uses: actions/setup-go@v3
